welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: reassignment to val
  positionFinale = false
                 ^SnakeBuggle:7: error: reassignment to val
    positionFinale=piositionFinale()
                  ^SnakeBuggle:17: error: not found: value EAST
    if (getDirection()==EAST) 
                        ^SnakeBuggle:35: error: not found: value EAST
    if (getDirection()==EAST) 
                        ^